@@ -1,3 +1,4 @@
+#!/usr/bin/perl
 #
 # $Header$
 #
@@ -108,8 +109,23 @@ isa_ok( $fac->get_widget('<main>'), "Gtk2::Menu" );
 
 # is( Gtk2::ItemFactory->path_from_widget($fac->get_widget_by_action(2)),
 #     '<main>/Menu/Test 2' );
-isa_ok( $fac->get_widget_by_action(2), "Gtk2::Widget" );
-isa_ok( $fac->get_item_by_action(2), "Gtk2::MenuItem" );
+
+# sometimes, these can apparently return undef
+SKIP: {
+	my $widget = $fac->get_widget_by_action(2);
+	skip 'get_widget_by_action returned undef', 1
+		unless defined $widget;
+
+	isa_ok( $widget, "Gtk2::Widget" );
+}
+
+SKIP: {
+	my $item = $fac->get_item_by_action(2);
+	skip 'get_item_by_action returned undef', 1
+		unless defined $item;
+
+	isa_ok( $item, "Gtk2::MenuItem" );
+}
 
 my $skip_actions_tests = FALSE;
 
